# simple-json-tui

./: Cargo.toml  LICENSE  README.md  output.json
src/: app.rs  file_state.rs  main.rs  traits.rs  ui.rs
src/app/: editing_screen.rs  json_helpers.rs  selection_screen.rs
src/app/screens/: editing_array.rs  editing_bool.rs  editing_default.rs  editing_num.rs  editing_object.rs  editing_preview.rs  editing_string.rs  file_screen.rs  mod.rs  quitting_screen.rs  selection.rs  start_screen.rs
src/app/state_structs/: arr.rs  editing_preview.rs  mod.rs  obj.rs  quitting.rs  selection_state.rs
src/ui/: bottom_status_bar.rs  components.rs  editing.rs  file_screen.rs  helpers.rs  preview.rs  quitting.rs  selection_pop.rs  start.rs  theme.rs
