[package]
name = "json_maker"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# tui-textarea
# minimal - tui-input see https://github.com/ratatui/ratatui/blob/main/examples/apps/user-input/src/main.rs
# selection list -> see https://github.com/ratatui/ratatui/blob/main/examples/apps/todo-list/src/main.rs
